# Sorta

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-optional.txt  requirements.txt  skills-lock.json
.github/workflows/: adversarial-review.yml  ci.yml
scripts/: adversarial-review.sh
sorta/: cli.py  default_config.json  dormant_detector.py  duplicate_finder.py  extension_mapper.py  organizer.py  recommendations.py  render.py  scanner.py  scheduler.py  trash_manager.py
tests/: test_cli.py  test_dormant_detector.py  test_duplicate_finder.py  test_extension_mapper.py  test_organizer.py  test_recommendations.py  test_render.py  test_scanner.py  test_scheduler.py  test_trash_manager.py
