[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sorta"
version = "1.1.0.dev0"
description = "Smart filesystem manager: scan, find duplicates and dormant files, organize, and delete by keyword."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Abdul Yishawu" }]
dependencies = []

[project.optional-dependencies]
# Enables rich-formatted output and native OS Trash. The CLI runs without these.
enhanced = ["rich>=13.0", "send2trash>=1.8"]

[project.scripts]
sorta = "sorta.cli:main"

[tool.setuptools]
packages = ["sorta"]

[tool.setuptools.package-data]
# default_config.json is loaded relative to the package at runtime, so it must
# ship inside the wheel.
sorta = ["default_config.json"]
